@@ -1,3 +1,8 @@
+Sun Dec 22 14:14:37 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	* GNUmakefile.in (dist): Don't update .po files automatically, since
+	  they're kept under revision control.
+
 Sun Dec 22 13:59:23 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
